/**
 * CA contract.
 */
syntax = "proto3";

package caimpl;

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Portkey.Contracts.CA";

service CAContractImpl {

}

message GetTransferLimitInput {
    aelf.Hash ca_hash = 1;
    string symbol = 2;
}
message GetTransferLimitOutput {
    int64 single_limit = 1;
    int64 daily_limit = 2;
    int64 daily_transferred_amount = 3;
}

message SetDefaultTokenTransferLimitInput {
    string symbol = 1;
    int64 default_limit = 2;
}
message DefaultTokenTransferLimitChanged {
    option (aelf.is_event) = true;
    string symbol = 1;
    int64 default_limit = 2;
}
message GetDefaultTokenTransferLimitInput {
    string symbol = 1;
}

message GetDefaultTokenTransferLimitOutput {
    string symbol = 1;
    int64 default_limit = 2;
}

message SetForbiddenForwardCallContractMethodInput {
    string method_name = 1;
    aelf.Address address = 2;
    bool forbidden = 3;
}
message ForbiddenForwardCallContractMethodChanged {
    option (aelf.is_event) = true;
    string method_name = 1;
    aelf.Address address = 2;
    bool forbidden = 3;
}
message TransferLimit {
    int64 single_limit = 1;
    int64 day_limit = 2;
}
message TransferredAmount {
    int64 daily_transfered = 1;
    google.protobuf.Timestamp update_time = 2;
}

message External {
    map<string, string> value = 1;
}

message ManagerApproveForbiddenEnabledInput {
  bool manager_approve_forbidden_enabled = 1;
}
message TransferLimitChanged{
    option (aelf.is_event) = true;
    aelf.Hash ca_hash = 1 [(aelf.is_indexed) = true];
    string symbol = 2 [(aelf.is_indexed) = true];
    int64 single_limit = 3 [(aelf.is_indexed) = true];
    int64 daily_limit = 4 [(aelf.is_indexed) = true];
}